K8/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "app-scanner"
  namespace: "scanner"
  labels:
    app: "frontend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - name: "app-scanner"
          image: "794934876309.dkr.ecr.us-west-2.amazonaws.com/tanusha-k8s-project:IMAGE_TAG"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
