K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-scanner
  namespace: scanner

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    # BOTH 80 and 443
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # Redirect HTTP → HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # ACM Certificate ARN
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:794934876309:certificate/641080d5-eabc-4f04-9b98-882355adc2b2

spec:
  ingressClassName: alb
  rules:
    - host: shopping.sivadevops.cloud

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app-scanner
                port:
                  number: 80
